--- a/index.html
+++ b/index.html
@@ -49,34 +49,38 @@
 <body class="bg-clblack text-white bg-grid">
 
   <!-- NAVBAR -->
-  <header class="sticky top-0 z-40 border-b border-white/5 bg-clblack/80 backdrop-blur">
-    <div class="max-w-6xl mx-auto px-4 sm:px-6 flex items-center justify-between h-16">
-      <div class="flex items-center gap-3">
-        <div class="w-9 h-9 rounded-full border border-clturq flex items-center justify-center shadow-[0_0_20px_rgba(17,215,227,0.5)]">
-          <span class="text-clturq font-semibold text-sm">CL</span>
-        </div>
-        <div class="leading-tight">
-          <p class="text-xs uppercase tracking-[0.2em] text-clturq">CL Tech Solutions</p>
-          <p class="text-sm text-white/80">Impulso Digital 360</p>
-        </div>
-      </div>
+  <header class="sticky top-0 z-50 bg-clblack/90 backdrop-blur border-b border-white/10">
+  <div class="max-w-6xl mx-auto px-4 sm:px-6 flex items-center justify-between h-24">
 
-      <nav class="hidden md:flex items-center gap-8 text-sm">
-        <a href="#beneficios" class="text-white/70 hover:text-clturq transition">Beneficios</a>
-        <a href="#incluye" class="text-white/70 hover:text-clturq transition">Qué incluye</a>
-        <a href="#proceso" class="text-white/70 hover:text-clturq transition">Cómo funciona</a>
-        <a href="#planes" class="text-white/70 hover:text-clturq transition">Inversión</a>
-        <a href="#faq" class="text-white/70 hover:text-clturq transition">Preguntas</a>
-      </nav>
+    <!-- LOGO GRANDE -->
+    <a href="#" class="flex items-center">
+      <img 
+        src="https://i.postimg.cc/hvbq8Lx0/3BC9A33B_6AB2_4C96_96CE_A505D0ADAB30.png" 
+        alt="CL Tech Solutions" 
+        class="w-48 h-auto md:w-60 lg:w-72"
+      />
+    </a>
 
-      <div class="hidden md:flex">
-        <a href="#formulario"
-           class="px-4 py-2 text-sm font-semibold rounded-full bg-clturq text-clblack shadow-[0_12px_35px_rgba(17,215,227,0.45)] hover:-translate-y-[2px] hover:shadow-[0_18px_45px_rgba(17,215,227,0.7)] active:translate-y-0 active:shadow-none transition">
-          Quiero mi web
-        </a>
-      </div>
+    <!-- NAVBAR -->
+    <nav class="hidden md:flex items-center gap-8 text-sm font-medium">
+      <a href="#beneficios" class="text-white/70 hover:text-clturq transition">Beneficios</a>
+      <a href="#incluye" class="text-white/70 hover:text-clturq transition">Qué incluye</a>
+      <a href="#proceso" class="text-white/70 hover:text-clturq transition">Cómo funciona</a>
+      <a href="#planes" class="text-white/70 hover:text-clturq transition">Planes</a>
+      <a href="#faq" class="text-white/70 hover:text-clturq transition">Preguntas</a>
+    </nav>
+
+    <!-- BOTÓN WHATSAPP -->
+    <div class="hidden md:flex">
+      <a href="https://wa.me/TU_NUMERO?text=Hola%20CLTECHSOLUTIONS%2C%20quiero%20información%20sobre%20Impulso%20Digital%20360"
+         class="px-5 py-2.5 text-sm font-semibold rounded-full bg-clturq text-clblack shadow-[0_14px_40px_rgba(17,215,227,0.45)]
+                hover:-translate-y-[2px] hover:shadow-[0_20px_55px_rgba(17,215,227,0.85)] transition">
+        WhatsApp
+      </a>
     </div>
-  </header>
+
+  </div>
+</header>
 
   <!-- HERO -->
   <section class="pt-14 pb-16 md:pt-24 md:pb-24">
