--- a/index.html
+++ b/index.html
@@ -47,15 +47,11 @@
   </style>
 </head>
 <body class="bg-clblack text-white bg-grid">
-
-  <!-- NAVBAR -->
-  <header class="sticky top-0 z-50 bg-clblack/90 backdrop-blur border-b border-white/10">
-  <div class="max-w-6xl mx-auto px-4 sm:px-6 flex items-center justify-between h-24">
-
-    <!-- LOGO GRANDE -->
+  
+    <!-- LOGO GRANDE SIN FONDO -->
     <a href="#" class="flex items-center">
       <img 
-        src="https://i.postimg.cc/hvbq8Lx0/3BC9A33B_6AB2_4C96_96CE_A505D0ADAB30.png" 
+        src="https://i.postimg.cc/L5ChBFj0/IMG-0156.png" 
         alt="CL Tech Solutions" 
         class="w-48 h-auto md:w-60 lg:w-72"
       />
@@ -72,7 +68,7 @@
 
     <!-- BOTÓN WHATSAPP -->
     <div class="hidden md:flex">
-      <a href="https://wa.me/TU_NUMERO?text=Hola%20CLTECHSOLUTIONS%2C%20quiero%20información%20sobre%20Impulso%20Digital%20360"
+      <a href="https://wa.me/TU_NUMERO?text=Hola%20Cristian%2C%20quiero%20información%20sobre%20Impulso%20Digital%20360"
          class="px-5 py-2.5 text-sm font-semibold rounded-full bg-clturq text-clblack shadow-[0_14px_40px_rgba(17,215,227,0.45)]
                 hover:-translate-y-[2px] hover:shadow-[0_20px_55px_rgba(17,215,227,0.85)] transition">
         WhatsApp
