--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:type" content="website">
   <meta property="og:title" content="Impulso Digital 360 | Tu negocio listo para vender en 48 horas">
   <meta property="og:description" content="Web profesional + Google Maps + SEO inicial + botón de WhatsApp en un solo sistema.">
-  <meta property="og:image" content="URL_DE_TU_PREVIEW" />
+  <meta property="og:image" content="https://i.postimg.cc/s2YtHvzB/IMG_0156.png" />
   <meta property="og:url" content="https://tudominio.com/impulso-digital-360" />
 
   <!-- Tailwind CDN -->
@@ -50,18 +50,21 @@
 
   <!-- NAVBAR -->
   <header class="sticky top-0 z-40 border-b border-white/5 bg-clblack/80 backdrop-blur">
-    <div class="max-w-6xl mx-auto px-4 sm:px-6 flex items-center justify-between h-16">
+    <div class="max-w-6xl mx-auto px-4 sm:px-6 flex items-center justify-between h-16 gap-4">
       <div class="flex items-center gap-3">
-        <div class="w-9 h-9 rounded-full border border-clturq flex items-center justify-center shadow-[0_0_20px_rgba(17,215,227,0.5)]">
-          <span class="text-clturq font-semibold text-sm">CL</span>
-        </div>
-        <div class="leading-tight">
-          <p class="text-xs uppercase tracking-[0.2em] text-clturq">CL Tech Solutions</p>
-          <p class="text-sm text-white/80">Impulso Digital 360</p>
+        <!-- LOGO GRANDE -->
+        <img
+          src="https://i.postimg.cc/s2YtHvzB/IMG_0156.png"
+          alt="CL Tech Solutions"
+          class="h-10 sm:h-12 md:h-14 w-auto object-contain"
+        />
+        <div class="leading-tight hidden sm:block">
+          <p class="text-[10px] sm:text-xs uppercase tracking-[0.2em] text-clturq">CL Tech Solutions</p>
+          <p class="text-sm text-white/80">Programa Impulso Digital 360</p>
         </div>
       </div>
 
-      <nav class="hidden md:flex items-center gap-8 text-sm">
+      <nav class="hidden md:flex.items-center gap-8 text-sm">
         <a href="#beneficios" class="text-white/70 hover:text-clturq transition">Beneficios</a>
         <a href="#incluye" class="text-white/70 hover:text-clturq transition">Qué incluye</a>
         <a href="#proceso" class="text-white/70 hover:text-clturq transition">Cómo funciona</a>
@@ -69,7 +72,19 @@
         <a href="#faq" class="text-white/70 hover:text-clturq transition">Preguntas</a>
       </nav>
 
-      <div class="hidden md:flex">
+      <div class="hidden md:flex items-center gap-4">
+        <!-- WHATSAPP ARRIBA -->
+        <div class="flex flex-col items-end leading-tight text-[11px]">
+          <span class="text-white/50 uppercase tracking-[0.16em]">WhatsApp directo</span>
+          <a
+            href="https://wa.me/593999630862?text=Hola,%20quiero%20informaci%C3%B3n%20sobre%20Impulso%20Digital%20360."
+            target="_blank"
+            class="text-clturq font-semibold hover:text-clturq/80"
+          >
+            099 963 0862
+          </a>
+        </div>
+
         <a href="#formulario"
            class="px-4 py-2 text-sm font-semibold rounded-full bg-clturq text-clblack shadow-[0_12px_35px_rgba(17,215,227,0.45)] hover:-translate-y-[2px] hover:shadow-[0_18px_45px_rgba(17,215,227,0.7)] active:translate-y-0 active:shadow-none transition">
           Quiero mi web
@@ -233,7 +248,7 @@
   <!-- PROCESO -->
   <section id="proceso" class="py-14 md:py-20 border-t border-white/5">
     <div class="max-w-6xl mx-auto px-4 sm:px-6">
-      <h2 class="text-2xl md:text-3xl font-semibold mb-3">¿Cómo funciona el proceso?</h2>
+      <h2 class="text-2xl md:tex-3xl font-semibold mb-3">¿Cómo funciona el proceso?</h2>
       <p class="text-white/70 text-sm md:text-base mb-8 max-w-2xl">
         Queremos que todo sea claro, rápido y sin estrés. Así trabajamos contigo:
       </p>
@@ -339,7 +354,7 @@
 
         <!-- Plan 197/mes -->
         <div class="rounded-2xl border border-clturq/60 bg-gradient-to-br from-clgray via-clblack to-black p-5 shadow-[0_18px_55px_rgba(0,0,0,0.8)] hover:-translate-y-1 transition">
-          <p class="text-xs text-white/60 mb-1 uppercase tracking-[0.18em]">Más vendido</p>
+          <p class="text-xs.text-white/60 mb-1 uppercase tracking-[0.18em]">Más vendido</p>
           <h3 class="font-semibold mb-1 text-clturq">Automatización Completa</h3>
           <p class="text-2xl font-bold mb-1">$197<span class="text-xs text-white/50">/mes</span></p>
           <p class="text-xs text-white/50 mb-3">Para negocios que quieren sistemas serios.</p>
@@ -381,7 +396,7 @@
   <section id="faq" class="py-14 md:py-20 border-t border-white/5">
     <div class="max-w-6xl mx-auto px-4 sm:px-6">
       <h2 class="text-2xl md:text-3xl font-semibold mb-3">Preguntas frecuentes</h2>
-      <p class="text-white/70 text-sm md:text-base mb-8 max-w-2xl">
+      <p class="text-white/70 text-sm md:text-base.mb-8 max-w-2xl">
         Si tienes dudas, es probable que estén aquí. Si no, puedes escribirnos directamente por WhatsApp.
       </p>
 
@@ -408,7 +423,7 @@
         </details>
 
         <details class="group border border-white/10 rounded-2xl bg-white/5 p-4">
-          <summary class="flex cursor-pointer list-none items-center justify-between">
+          <summary class="flex.cursor-pointer list-none items-center justify-between">
             <span class="font-semibold text-white/90">¿Es obligatorio tomar un plan mensual después?</span>
             <span class="text-clturq group-open:rotate-180 transition">▼</span>
           </summary>
@@ -442,7 +457,7 @@
 
       <div class="mb-8">
         <a href="TU_LINK_DE_FORMULARIO"
-           class="inline-flex items-center justify-center px-6 py-3 text-sm font-semibold rounded-full bg-clturq text-clblack shadow-[0_16px_55px_rgba(17,215,227,0.9)] hover:-translate-y-[2px] hover:shadow-[0_22px_70px_rgba(17,215,227,1)] active:translate-y-0 active:shadow-none transition">
+           class="inline-flex items-center justify-center px-6 py-3 text-sm font-semibold rounded-full bg-clturq text-clblack shadow-[0_16px_55px_rgba(17,215,227,0.9)] hover:-translate-y-[2px] hover:shadow-[0_22px_70px_rgba(17,215,227,1)].active:translate-y-0 active:shadow-none transition">
           Ir al formulario de aplicación
         </a>
       </div>
@@ -457,7 +472,13 @@
 
       <p class="text-xs text-white/50 mt-6">
         Si tienes dudas antes de aplicar, puedes escribirnos a:<br>
-        <span class="text-clturq font-semibold">+593 XX XXX XXXX (WhatsApp)</span>
+        <a
+          href="https://wa.me/593999630862?text=Hola,%20tengo%20dudas%20sobre%20Impulso%20Digital%20360."
+          target="_blank"
+          class="text-clturq font-semibold"
+        >
+          +593 99 963 0862 (WhatsApp)
+        </a>
       </p>
     </div>
   </section>
